# womblex

./: .coverage  .gitignore  .gitmodules  CLAUDE.md  README.md  THIRD_PARTY_DATA.md  pyproject.toml  requirements-isaacus.in  requirements.in
configs/: example.yaml
docs/: architecture.md  composable-design.md  dataflow.md  evaluation.md  heuristics_disambiguation.md  steering.md
docs/accuracy/: CHUNKING.md  EXTRACTION.md  PII_CLEANING.md  REDACTION_HANDLING.md
models/: README.md
src/womblex/: __init__.py  cli.py  config.py  operations.py  pipeline.py
src/womblex/analyse/: __init__.py  enrich.py  graph.py  models.py  query.py
src/womblex/ingest/: __init__.py  detect.py  extract.py  geospatial.py  gnaf.py  gnaf_schema.py  heuristics_cv2.py  heuristics_numpy.py  paddle_ocr.py  redaction.py  spreadsheet.py  strategies.py  strategies_file.py  strategies_native.py  strategies_scanned.py
src/womblex/pii/: __init__.py  cleaner.py  stage.py
src/womblex/process/: __init__.py  chunker.py
src/womblex/redact/: __init__.py  detector.py  stage.py  utils.py
src/womblex/store/: __init__.py  checkpoint.py  enrichment_output.py  (+1 more)
tests/: accuracy_reports.py  conftest.py  test_bench_ocr_accuracy.py  test_chunker.py  test_config.py  test_detect.py  test_enrich.py  test_enrichment_output.py  test_extract.py  test_fixture_accuracy.py  test_fixtures.py  test_geospatial.py  test_gnaf.py  test_graph.py  test_integration.py  test_metrics.py  test_output.py  test_pii.py  test_pii_enrichment.py  test_pipeline.py  test_query.py  test_redaction.py  test_tabular_metrics.py  test_text_extractor.py  test_verify.py  test_womblex_collection_accuracy.py
(+7 files in other folders)
